--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<nav id="navigation">
 
 		<h1>Hello world</h1>
-			<a href="about.html">About</a>
-			<a href="homepage.html">Home</a>
-			<a href="exit.html">Exit</a>
+			<a href="google.com">About</a>
+			<a href="form.html">Home</a>
+			<a href="youtube.com">Exit</a>
 		</nav>
 	</header>
 
