--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>Hello world</h1>
 			<a href="google.com">About</a>
 			<a href="form.html">Home</a>
-			<a href="youtube.com">Exit</a>
+			<a href="https://www.youtube.com/">Exit</a>
 		</nav>
 	</header>
 
